tests/paczka1/fuzzy1/86972535.err
Error in line 5: 87kss0vzW2 A660 51,9
Error in line 18: tBuF77V S906 88,1
Error in line 24: tBuF77V A660 58,1
Error in line 30: S906 A6/7 70,8
Error in line 33: 2r2Y A931 35,0
Error in line 36: 2r2Y A660 64,9
